# ovhsaver

./: .gitignore  .secrets.example  Dockerfile  clouds.example.yaml  docker-compose.yaml  pyproject.toml  ruff.toml
.github/workflows/: deploy.yml  schedule.yml
src/ovhsaver/: __init__.py  __main__.py  cloud.py  script.py
tests/: conftest.py  test_acceptation.py
